--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -9,6 +9,27 @@ DESKTOP: 992PX ATÉ 1200PX
 GRANDES TELAS: ACIMA DE 1200PX
 */
 
+@media screen and (orientation: landscape) and (max-width: 767px){
+    section#login{
+        min-width: 400px;
+        max-width: 700px;
+    } 
+
+    section#login > div#imagem{
+        float: left;
+        height: 100%;
+        width: 30vw;
+        max-width: 190px;
+    }
+
+    section#login > div#formulario{
+        float: right;
+        width: 55%;
+        
+    }
+    
+}
+
 @media screen and (min-width: 768px) and (max-width: 992px){
     body{
         background-image: linear-gradient( to right, var(--cor2), var(--cor4));
