--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -13,10 +13,11 @@ GRANDES TELAS: ACIMA DE 1200PX
     body{
         background-image: linear-gradient( to right, var(--cor2), var(--cor4));
     }
-    
+
     section#login{
         min-width: 400px;
         max-width: 700px;
+
     } 
 
     section#login > div#imagem{
@@ -52,6 +53,11 @@ GRANDES TELAS: ACIMA DE 1200PX
         width: 55%;
         
     }
+
+    div#formulario > p{
+        font-size: 1.2em;
+        font-weight: 600;
+    }
 }
 
 @media screen and (min-width: 992px){
@@ -68,9 +74,15 @@ GRANDES TELAS: ACIMA DE 1200PX
         height: 100%;
         width: 45%;
     }
+
     section#login > div#formulario{
         float: left;
         height: 100%;
         width: 50%;
+    }
+
+     div#formulario > p{
+       font-size: 1.5em;
+       font-weight: 500;
     }
 }
