--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,7 +31,7 @@ section#login{
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-    height: 80vh;
+    height: 90vh;
     width: 70vw;
     max-width: 400px;
     background-color: white;
@@ -51,4 +51,14 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    text-align: center;
+    font-weight: 500;
 }
