--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,13 +4,14 @@
     margin: 0px;
     padding: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    box-sizing: border-box;
 }
 :root{
-    --cor1: #6FA3F6;
+    --cor1: #c2dafa;
     --cor2: #155AA8;
     --cor3: #01337C;
     --cor4: #9743f8;
+    --cor5: #7115da;
 }
 
 body{
@@ -20,7 +21,7 @@ body{
 }
 
 main{
-    position: relative;
+    position: absolute;
     height: 100vh;
     width: 100vw;
 }
@@ -61,4 +62,77 @@ div#formulario > h1{
 div#formulario > p{
     text-align: center;
     font-weight: 500;
+}
+
+form > div.campo{
+    background-color: var(--cor4);
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 5px;
+}
+
+div.campo > i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: var(--cor1);
+    font-size: 1em;
+    width: calc(100% - 44.5px);
+    transform: translateY(-10px);
+    height: 99%;
+    border: 2px solid var(--cor4);
+    border-radius: 5px;
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+}
+
+div.campo > label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    font-weight: 600;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    background-color: var(--cor4);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: var(--cor5);
+}
+
+form  > a {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: 600;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    padding-top: 5px;
+    background-color: white;
+    color: var(--cor3);
+    border: 2px solid var(--cor3);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > a:hover{
+    background-color: var(--cor2);
+    color: white;
+
 }
